# Aegis-BPF

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  renovate.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bpf/: aegis.bpf.c  aegis_common.h  aegis_exec.bpf.h  aegis_file.bpf.h  aegis_ima.bpf.h  aegis_kernel.bpf.h  aegis_net.bpf.h  aegis_overlay.bpf.h
build-pack/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  aegisbpf-0.1.0-1.x86_64.rpm  aegisbpf_0.1.0_amd64.deb  build.ninja  cmake_install.cmake  install_manifest.txt
cmake/: Reproducibility.cmake  glibc_compat.h
community-rules/: CONTRIBUTING.md  README.md  kdevtmpfsi-cryptominer.conf  kubelet-credentials-protection.conf  web-shell-from-document-root.conf
config/: benchmark_focus_patterns.txt  coverage_thresholds.json  event-schema.json  policy-production.yml  repo_labels.json  required_checks.txt  required_checks_release.txt  vendored_deps.json
demo/: k8s-policy.yaml  k8s-workload.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_CONTROL_PLANE.md  ARCHITECTURE_SUPPORT.md  BPF_MAP_SCHEMA.md  BPF_OBJECT_INTEGRITY.md  BPF_VERIFICATION_BYPASS.md  BRANCH_PROTECTION.md  BTF_FALLBACK.md  BYPASS_CATALOG.md  CAPABILITY_POSTURE_CONTRACT.md  CAPACITY_PLANNING.md  CHANGELOG.md  CI_EXECUTION_STRATEGY.md  CI_WORKFLOW_AUDIT.md  CNCF_SANDBOX_APPLICATION.md  COMPATIBILITY.md  COVERAGE.md  DESIGN_ARTIFACT_STATUS.md  DESIGN_PDF_SOURCES.md  DETERMINISM_BENCHMARK.md  DEVELOPER_GUIDE.md  EDGE_CASE_COMPLIANCE_RESULTS.md  EDGE_CASE_COMPLIANCE_SUITE.md  EMERGENCY_CONTROL_CONTRACT.md  ENFORCEMENT_CLAIMS.md  ENFORCEMENT_GUARANTEES.md  ENFORCEMENT_SEMANTICS_WHITEPAPER.md  ENFORCEMENT_WEDGE_STRATEGY.md  EVENT_LOSS_AND_BACKPRESSURE.md  EVIDENCE.md  EXCELLENCE_SUMMARY.md  EXTERNAL_REVIEW_PREP.md  EXTERNAL_REVIEW_STATUS.md  EXTERNAL_VALIDATION.md  GO_LIVE_CHECKLIST.md  GUARANTEES.md  HARDENING.md  HELM_ENFORCE_GATING_CONTRACT.md  HOOK_CAPABILITY_PROBE.md  (+50 more)
operator/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum
proofs/: README.md  check_model_fidelity.py  inode_alias_resistance.py  requirements.txt  run.sh
prototype/aegis-next/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  ROADMAP.md
prototype/aegis-next/bench/: compare.sh  workload.sh
prototype/aegis-next/bpf/: arena_htable.h  binary_auth.bpf.c  prov_types.h  provenance.bpf.c  provenance_legacy.bpf.c  quarantine.bpf.c  selfprotect.bpf.c
prototype/aegis-next/deploy/: aegisbpf-next.conf  aegisbpf-next.service
prototype/aegis-next/docs/: ARCHITECTURE.md  HARDENING.md
prototype/aegis-next/examples/: policy.rules  rules-compliance-cis.rules  rules-container-escape.rules  rules-cryptomining.rules  rules-k8s-runtime.rules  rules-lateral-movement.rules  rules-reverse-shell.rules
prototype/aegis-next/include/: aegis_next_prov.hpp  feature_probe.hpp  prov_arena_types.h
prototype/aegis-next/packaging/: postinst  postrm
prototype/aegis-next/src/: event_export.hpp  main.cpp  prov_walk.cpp  prov_walk.hpp
prototype/aegis-next/tests/: e2e_policy_delivery.sh  fuzz_prov.cpp  test_prov_walk.cpp
results/: bench-comparison.md
rules/: README.md
rust/aegis-parser/: .gitignore  Cargo.toml  README.md
rust/aegis-parser/fuzz/: Cargo.toml  README.md
rust/aegis-parser/fuzz/corpus/fuzz_rs_bundle/: seed_lenient_ints_unknown_keys.bundle
rust/aegis-parser/fuzz/corpus/fuzz_rs_policy/: seed_all_categories_v6.conf  seed_ip_port_canonical.conf
rust/aegis-parser/fuzz/fuzz_targets/: fuzz_rs_bundle.rs  fuzz_rs_event.rs  fuzz_rs_policy.rs
rust/aegis-parser/src/: bundle.rs  event.rs  ffi.rs  lib.rs  policy.rs
rust/aegis-parser/src/bundle/: tests.rs
rust/aegis-parser/src/event/: tests.rs
rust/aegis-parser/src/policy/: tests.rs
sbom/: sbom.cyclonedx.json  sbom.spdx.json  sbom.txt
scripts/: apply_k8s_policy.sh  audit_branch_protection_matrix.sh  audit_workflows.sh  aws_soak_24h.sh  backpressure_saturation.sh  bench_syscall.sh  bootstrap_repo_controls.py  btfgen.sh  btfgen_all.sh  capture_perf_environment.py  changed_c_family_files.sh  chaos_ringbuf_overflow.sh  check_branch_protection.sh  check_hardening.sh  check_lsm.sh  check_reproducible_build.sh  check_vendored_dependencies.sh  coverage_ratchet_advisor.py  demo_block_network.sh  demo_block_shadow.sh  demo_breakglass.sh  demo_k8s_full.sh  downgrade_test.sh  e2e_enforcement_proofs.sh  e2e_file_enforcement_matrix.sh  e2e_fs_matrix.sh  e2e_namespace_matrix.sh  e2e_verified_exec_fsverity.sh  evaluate_capability_posture.py  explain_k8s_policy.sh  filter_benchmark_results.py  gen_bpfcompat_manifest.py  gen_kernel_compat_manifest.py  generate_changelog.sh  generate_perf_baseline_artifact.py  generate_sbom.sh  perf_compare.sh  perf_connect_bench.sh  perf_open_bench.sh  perf_slo_check.sh  (+30 more)
src/: aegis_parser_ffi.h  binary_hash.cpp  binary_scan.cpp  binary_scan.hpp  bpf_attach.cpp  bpf_attach.hpp  bpf_config.cpp  bpf_config.hpp  bpf_integrity.cpp  bpf_integrity.hpp  bpf_link_pin.cpp  bpf_link_pin.hpp  bpf_maps.cpp  bpf_maps.hpp  bpf_ops.cpp  bpf_ops.hpp  bpf_signing.cpp  bpf_signing.hpp  btf_loader.cpp  btf_loader.hpp  capabilities.cpp  capabilities.hpp  cef_formatter.cpp  cef_formatter.hpp  cli_bpf.cpp  cli_bpf.hpp  cli_common.cpp  cli_dispatch.cpp  cli_network.cpp  cli_policy.cpp  cli_run.cpp  commands.hpp  commands_block_allow.cpp  commands_cgroup.cpp  commands_explain.cpp  commands_explain.hpp  commands_health.cpp  commands_keys_survival.cpp  commands_metrics.cpp  commands_monitoring.cpp  (+63 more)
tests/: bench_policy.cpp  bench_syscall.cpp  check_docs_security_contract.py  check_failure_modes_contract.py  check_guarantees_contract.py  check_helm_posture_contract.py  check_k8s_rollout_contract.py  check_kpi_threshold_contract.py  check_market_leadership_contract.py  check_metrics_contract.py  check_ops_observability_contract.py  check_perf_baseline_doc.py  check_phase2_evidence_contract.py  (+39 more)
(+275 files in other folders)
